@@ -2,6 +2,7 @@ package com.example.SocialConnect.service;
 
 import com.example.SocialConnect.model.Post;
 import com.example.SocialConnect.model.User;
+import com.example.SocialConnect.repository.LikeRepository;
 import com.example.SocialConnect.repository.PostRepository;
 import com.example.SocialConnect.repository.UserRepository;
 import com.example.SocialConnect.dto.PostDto;
@@ -26,6 +27,9 @@ public class PostService {
     @Autowired
     private UserRepository userRepository;
 
+    @Autowired
+    private LikeRepository likeRepository;
+
     public Post createPost(String content, String userEmail) {
         User user = userRepository.findByEmail(userEmail)
                 .orElseThrow(() -> new RuntimeException("User not found"));
@@ -35,10 +39,16 @@ public class PostService {
         return postRepository.save(post);
     }
 
-    public List<PostDto> getRandomPosts(int page, int size) {
+    public List<PostDto> getRandomPosts(int page, int size, User currentUser) {
         Pageable pageable = PageRequest.of(page, size, Sort.by("id").descending());
         Page<Post> posts = postRepository.findAll(pageable);
-        // Можно random, если хочешь: postRepository.findRandom(pageable); — но обычно просто свежие
-        return posts.stream().map(PostDto::fromEntity).toList();
+
+        return posts.getContent().stream()
+            .map(post -> PostDto.fromEntity(
+                post,
+                likeRepository.findByUserAndPost(currentUser, post).isPresent(),
+                likeRepository.countByPost(post) // ← получаем количество лайков
+            ))
+            .collect(Collectors.toList());
     }
 }
